css/panoptes.css
body {
  width: 95%;
  max-width: 1200px !important;
  margin: 0 auto;
}
.clearfix::after {
  content: "";
  clear: both;
  display: table;
}

.main-nav li a .fa {
  font-size: 1em;
  margin-right: 0px;
}

.logo a {
    width: 350px;
    background-size: 350px;
    background-image: url('../img/logo.png') no-repeat;

    @media #{$retina}  {
        background-image: url('../img/logo-retina.png') no-repeat;
        background-size: 350px;
      }
}   

/* Small screens */
@media only screen and (max-width: 575px) { 
  .site-header .logo a {
    background: url(../img/favicon.png) no-repeat;
    background-size: contain;
    width: 2em;
  }
}

@media only screen and (min-width: 768px) { 
  .site-header .logo.responsive a {
    background: url(../img/full-logo.png) no-repeat;
    background-size: contain;
    width: 10em;
    height: 10em;
  }
}

aside {
    background: #1f8dd6;
    margin: 1em 0;
    padding: 1em 2em;
    border-radius: 25px;
    color: #fff;
}

 /*Menu */
.main-nav {
  padding-right: 1em;
}

.navigation li:hover {
  background-color: rgba(138, 32, 4, 0.32);
  border-radius: 5px;  
}

/*Nested links*/
.navigation li ul li a:hover {
    border-left: 2px solid #8b2004;
}

.navigation .small-screen-icon {
  display: none;
}

@media screen and (max-width: 768px) {
  .main-nav {
      display: block;
  }

  /*Hide all the nav links except the first*/
  .main-nav li:not(:first-child) { display: none; }
  .main-nav li.small-screen-icon {
    float: right;
    display: block;
  }

  .main-nav.responsive ul {
      float: none;
      margin-top: 14px;
      text-align: right;
  }

  /*Show the menu icon when clicked */
  .responsive li {
    float: inherit;
  }

  .main-nav.responsive li.small-screen-icon {
    float: inherit;
    display: block;
  }
  
  .responsive li:not(:first-child) { 
    display: block;

  }
  
  .responsive li.nested ul.first-level {
    display: contents;
  }

  .responsive li.nested ul.first-level a {
    display: inherit;
    font-size: smaller;
    line-height: 10px;
    padding-right: 5px;
  }

  .responsive li.current a{
    border: none;
    border-right: 2px solid #8b2004;
  }

  .responsive li a{
    text-decoration: underline;
  }

  .responsive li.nested ul.first-level a{
    text-decoration: none;
  }  

  .navigation li:hover {
    background-color: white;
  }

}

.breadcrumbs {
  margin-bottom: 10px;
}


@media screen and (max-width: 768px) {
  .container {
      margin: 0 1em;
  }
}

.content-narrow {
  padding: 1em;
}

/* Slick Carousel */
.slick-carousel .holder {
    height: 400px;
}

/* Main Name on Home Page */
#banner {
  border: 1px solid;
  border-radius: 10px;
  background: url('/uploads/2018/12/16/PAN001_sunset.png');
  background-repeat: no-repeat;
  background-position-x: 70%;
  background-position-y: 50%;
}

@media screen and (max-width: 768px) {
  #banner {
    margin: 0;
    height: 50vw !important;
  }
}

@media screen and (max-width: 575px) {
  #banner {
    max-height: 300px;
    height: 70vw !important;
    margin-left: 1.25em !important;
    margin-right: 1.25em !important;
  }
}

.call-to-action {
  background-color: rgba(178, 170, 170, 0.5);
  padding: 0px 8px;
  border-radius: 10px;
  -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
  -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
  box-shadow: 1px 2px 3px rgba(0,0,0,.5);   
}

#banner .call-to-action {
  vertical-align: text-bottom;
  margin: 5vw 13vw;
}

@media screen and (max-width: 768px) {
  #banner .call-to-action {
    vertical-align: text-bottom;
    margin: 5vw 0vw;
  }  
}

@media all and (max-width: 575px) { 
  #banner .call-to-action {
    vertical-align: top;
    margin: 0vw -9vw;
  }  
  #banner .call-to-action h1 {
      font-size: 1.5em;
  }
  #banner .call-to-action h2 {
      font-size: 1em;
  }    
  .call-to-action {
    background-color: unset;
    box-shadow: none;   
  }  
}



#banner .call-to-action h1 {
  line-height: 0.8em;
}

.main-message {
  padding: 0px 0px;
}

.main-message .content-narrow {
  text-align: -webkit-center
}

.main-message h2 {
  max-width: 27em;
}

/* Services */

.service {
    padding: 1em;
}

.service p {
  height: 13em;
}

.service .button-link a {
  width: 90%;
}

@media screen and (max-width: 768px) {
  .service p {
    height: 20em !important;
  }
  
  .service .button-link a {
    width: 95%;
    padding: 10px 0px;
  }  
}

@media screen and (max-width: 575px) {
  .service p {
    height: auto !important;
  }
}


/* Teams */
/* Teams */
.card {
  height: auto;
  margin: 0.5em 0em !important;
}

.card-header {
  max-height: 80vw !important;
  display: block;
  overflow: hidden;
}

.card-header img {
  height: auto !important;
}

.content img {
  display: block;
  margin: auto;
}

.content img {
  display: block;
  margin: auto;
}

@media all and (min-width: 768px) { 
  .card {
    margin: 0.5em 0.5em !important;
    height: 60vw;
  }  

  .card-header {
    height: 175px !important;
  }  
} 

@media all and (min-width: 991px) { 
  .card {
    margin: 0.5em 0.5em !important;
    height: 55vw;
    max-height: 600px;
  }  

  .card-header {
    height: 30vw !important;
  }    
} 
 
/* People */
.column-list-layout .post .post-header, .profile-photo {
    border-radius: 5%   
}

.personal_url {
    float: left;
    margin-right: 10px;
    margin-bottom: 0;
    line-height: 2em;
    font-size: 12px;
}

/* Partners */
.partners {
  margin: 0 0;
}

.partners h2 {
  margin-bottom: 0px;
}

.partners ul {
  display: flow-root;
  margin: 1em 2em;
}

.partners ul li {
  margin: 0px 10%;
  float: left;
  list-style: none;
  padding-bottom: 2em;
} 

.partners ul li img {
  max-width: 150px
}

.meta ul .role {
  background-color: aliceblue;
  padding: 2px 8px;
  font-weight: 600;
  border-radius: 7px;
  border: 1px solid lightgrey;  
}

/* News Posts */
.news-twitter {
  padding: 0 0 15px 0;
}

.news-twitter .col-wrap {
    padding: 0 25px;
}

.news-item {
  border-left: 1px solid darkgrey;
  background-color: lightgrey;
  padding: 0.5em;
  margin-bottom: 0.5em;
}

/* Footer */
.site-footer {
  margin-top: 10px;
  padding-top: 25px;
}

/* Image Thumbnails */
.thumbnail-img img {
    width: inherit !important;
    max-width: 25vw;
    height: 18vw !important;
    max-height: 300px;
    border-radius: 10px;
}

.thumbnail-img img.bordered {
  border: 1px solid;
}

@media screen and (max-width: 768px) {
  .thumbnail-img img {
      max-width: 90%;
      width: 50%;
      height: auto;
      border-radius: 10px;
  }  
}

@media screen and (max-width: 575px) {
  .thumbnail-img img {
      max-width: 100%;
      width: 100%;      
      height: auto !important;
      border-radius: 10px;
  }  
}

.column-list-layout .post .post-header:hover {
    box-shadow: none;
}

.column-list-layout .post .post-body .subtitle {
  height: 12px;
}

.read-more {
    float: right;
    font-size: smaller;
    font-weight: 500;
    padding-bottom: 5px;
}

.read-more:hover {
  color: #8b2004;
  font-weight: bold;
}

#teams-map {
  margin: 0 auto;
  margin-bottom: 20px;
}

#teams-map iframe {
  width: 99%;
  height: 360px;
}

@media all and (min-width: 768px) { 
  #teams-map iframe {
    width: 640px;
    height: 480px;
  }
} 

@media all and (min-width: 991px) { 
  #teams-map iframe {
    width: 800px;
    height: 600px;
  }  
} 

/*
@media all and (max-width: 1199px) { ... } 
@media all and (max-width: 991px) { ... } 
@media all and (max-width: 768px) { ... } 
@media all and (max-width: 575px) { ... }
*/

